--- a/bird_boxes.ipynb
+++ b/bird_boxes.ipynb
@@ -778,13 +778,9 @@
         "    # Create a mobilenet version 2 model object\n",
         "    mobilenet_model = tf.keras.applications.mobilenet_v2.MobileNetV2(\n",
         "        input_shape=(224, 224, 3),\n",
-        "        alpha=1.0,\n",
-        "        include_top=True,\n",
+        "        include_top=False,\n",
         "        weights='imagenet',\n",
-        "        input_tensor=None,\n",
-        "        pooling=None,\n",
-        "        classes=1000,\n",
-        "        classifier_activation='softmax',\n",
+        "\n",
         "    )\n",
         "\n",
         "\n",
@@ -831,15 +827,16 @@
         "    ### YOUR CODE HERE ###\n",
         "\n",
         "    # global average pooling 2d layer\n",
-        "    x = tf.keras.layers.GlobalAveragePooling2D((2,2))(features)\n",
         "\n",
         "    # flatten layer\n",
-        "    x = tf.keras.layers.Flatten()(x)\n",
         "    # 1024 Dense layer, with relu\n",
-        "    x = tf.keras.layers.Dense(1024)(x)\n",
+        "    x = tf.keras.layers.Dense(1024, activation = \"relu\")(features)\n",
         "\n",
         "    # 512 Dense layer, with relu\n",
-        "    x = tf.keras.layers.Dense(512, activation = \"relu\")\n",
+        "    x = tf.keras.layers.Dense(512, activation = \"relu\")(x)\n",
+        "    x = tf.keras.layers.GlobalAveragePooling2D()(x)\n",
+        "\n",
+        "    x = tf.keras.layers.Flatten()(x)\n",
         "\n",
         "    ### END CODE HERE ###\n",
         "\n",
@@ -923,7 +920,7 @@
         "    bounding_box_output = bounding_box_regression(last_dense_layer)\n",
         "\n",
         "    # define the TensorFlow Keras model using the inputs and outputs to your model\n",
-        "    model = tf.keras.Model(inputs = inputs, outputs = [bounding_box_output])\n",
+        "    model = tf.keras.Model(inputs = inputs, outputs = bounding_box_output)\n",
         "\n",
         "    ### END CODE HERE ###\n",
         "\n",
@@ -970,8 +967,8 @@
         "\n",
         "    # compile your model\n",
         "    model.compile(\n",
-        "    optimizer='SGD',\n",
-        "    loss=\"MSE\",\n",
+        "    optimizer=tf.keras.optimizers.SGD(learning_rate = 0.01, momentum = 0.9),\n",
+        "    loss=\"mean_squared_error\",\n",
         ")\n",
         "\n",
         "    ### END CODE HERE ###\n",
@@ -1074,16 +1071,17 @@
         "### START CODE HERE ###\n",
         "\n",
         "# Choose a batch size\n",
-        "BATCH_SIZE = None\n",
+        "BATCH_SIZE = 64\n",
         "\n",
         "# Get the length of the training set\n",
-        "length_of_training_dataset = None\n",
+        "length_of_training_dataset = len(visualization_validation_dataset)\n",
         "\n",
         "# Get the length of the validation set\n",
-        "length_of_validation_dataset = None\n",
+        "length_of_validation_dataset = len(visualization_validation_dataset)\n",
         "\n",
         "# Get the steps per epoch (may be a few lines of code)\n",
-        "steps_per_epoch = None\n",
+        "remainder = True if length_of_training_dataset % BATCH_SIZE == 0 else False\n",
+        "steps_per_epoch = length_of_training_dataset // BATCH_SIZE + 1 if remainder else length_of_training_dataset // BATCH_SIZE\n",
         "\n",
         "# get the validation steps (per epoch) (may be a few lines of code)\n",
         "validation_steps = length_of_validation_dataset//BATCH_SIZE\n",
@@ -1118,6 +1116,13 @@
     },
     {
       "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "-MmQBUr8P2mR"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "BTL8VVAaKXR7"
       },
@@ -1125,6 +1130,24 @@
         "<a name='ex-07'></a>\n",
         "### Exercise 7"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "kKonKfAcP2zP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "validation_dataset"
+      ],
+      "metadata": {
+        "id": "Mr0oqnE3Qh6h"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1137,7 +1160,14 @@
         "### YOUR CODE HERE ####\n",
         "\n",
         "# Fit the model, setting the parameters noted in the instructions above.\n",
-        "history = None\n",
+        "\n",
+        "history = model.fit(\n",
+        "  x = training_dataset,\n",
+        "  steps_per_epoch = steps_per_epoch,\n",
+        "  validation_data = validation_dataset,\n",
+        "  validation_steps = validation_steps,\n",
+        "  epochs = EPOCHS\n",
+        ")\n",
         "\n",
         "### END CODE HERE ###"
       ]
